<resources>
    <string name="app_name">IMT_COVID</string>
    <string name="home">Home</string>
    <string name="menu">Menu</string>
    <string name="references">References</string>
    <string name="about">About Us</string>
    <string name="lang">Change language</string>
    <string name="information">Information</string>
    <string name="covid_19_dashboard">COVID-19 Dashboard</string>
    <string-array name="summary_title">
        <item name="vietnam_summary">Vietnam Summary</item>
        <item name="world_summary">Summary Worldwide</item>
    </string-array>
    <string-array name="change_lang">
        <item name="en">English</item>
        <item name="vn">Vietnam</item>
    </string-array>
    <string name="choose_lang">Choose Language</string>
    <string name="last_update">Last update at %1$s</string>
    <string name="cases_city_title">Cases by City/Provinces</string>
    <string name="country_region">Country/Region</string>
    <string name="city_provinces">City/Provinces</string>
    <string name="total_cases">Total cases(T)</string>
    <string name="death_cases">Death(D)</string>
    <string name="active_cases">Active(A)</string>
    <string name="recovered_cases">Recovered(R)</string>
    <string name="total">Total</string>
    <string name="Default_number">0</string>
    <string name="default_plus">+0</string>
    <string name="note_vn">Note that T is different than A+D+R, this is because a classification changes, for more detail see https://ncov.moh.gov.vn/</string>
    <string name="gov_link"><a href="https://ncov.moh.gov.vn/">The Ministry of Health of Vietnam website</a> </string>
    <string name="who_link"><a href="https://covid19.who.int/">WHO Coronavirus Disease(COVID-19) Dashboard</a></string>
    <string name="jhu_link"><a href="https://coronavirus.jhu.edu/map.html">COVID-19 Dashboard by the Center for Systems Science and Engineering (CSSE) at Johns Hopkins University (JHU)</a></string>
    <string name="ecdc_link"><a href="https://www.ecdc.europa.eu/en/geographical-distribution-2019-ncov-cases">European Centre for Disease Prevention and Control</a></string>
    <string name="fb_link"><a href="https://www.facebook.com/thongtinchinhphu">Information from Vietnam Government</a> </string>
    <string name="symptoms">Symptoms</string>
    <string name="assistance">Assistance</string>
    <string name="cases_country_title">Cases by Country/Region</string>
    <string name="see_more"><u>See more charts</u></string>
    <string name="number_of_cases_by_gender">NUMBER OF CASES BY GENDER</string>
    <string name="number_of_cases_by_nationality">NUMBER OF CASES BY NATIONALITY</string>
    <string name="symptoms_des">It usually takes 2–14 days to the symptoms appear on the infected patient. In some specific cases, symptoms appear after 28 days since the patient is infected. According to WHO, the common COVID-19 symptoms are:</string>
    <string name="list">
    <ul>
        <li>Fever or chills</li>\n
        <li>Cough</li>\n
        <li>Fatigue</li>\n
        <li>Shortness of breath or difficulty breathing</li>\n
        <li>Muscle or body aches</li>\n
        <li>New loss of taste or smell</li>\n
        <li>Sore throat</li>\n
        <li>Congestion or runny nose</li>\n
        <li>Nausea or vomiting</li>\n
        <li>Headache</li>\n
        <li>Diarrhea</li>
    </ul>
    </string>
    <string name="hotline">Vietnam\'s hotline: 19009095</string>
    <string name="hospital"> <a href="http://vncdc.gov.vn/vi/phong-chong-dich-benh-viem-phoi-cap-ncov/14013/danh-sach-cac-don-vi-da-duoc-bo-y-te-cho-phep-thuc-hien-xet-nghiem-khang-dinh-covid-19-cap-nhat-den-ngay-10-8-2020">List of hospital in Vietnam where can test for COVID-19
</a> </string>
    <string name="about_text1">IMT COVID-19 is an Android application that was developed based on the <a href="https://imt-covid19.herokuapp.com/"> IMT COVID-19 website.</a></string>
    <string name="about_text3">We are Nguyen Tri Huan and Nguyen Duc Dan, under the supervision of Dr. Sebastian Basterrech from FEI, VSB-TUO, Ostrava, Czech Republic.</string>
    <string name="about_text2">This is the final project to the thesis defence of University of Science and Technology of Hanoi(USTH).</string>
    <string name="meet_our_team">Meet Our Team</string>
    <!--    <string name="imt_covid_19_website"></string>-->
</resources>